<resources>
    <string name="app_name">Surf Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_screen_title">Вход</string>
    <string name="auth_phone_placeholder">Логин</string>
    <string name="auth_password_placeholder">Пароль</string>
    <string name="auth_login_button">Войти</string>
    <string name="app_loading_button_text">Действие</string>
    <string name="auth_credentials_invalid_error_text">Логин или пароль введен неправильно</string>
    <string name="auth_empty_field">Поле не может быть пустым</string>
    <string name="auth_incorrect_phone_format">Неверный формат номера телефона</string>
    <string name="auth_incorrect_password_format">Пароль должен быть от 6 до 255 символов</string>
    <string name="connection_error_snackbar_text">Отсутствует интернет-соединение\nПопробуйте позже</string>
    <string name="bottom_bar_main_screen_title">Главная</string>
    <string name="bottom_bar_favorites_screen_title">Избранное</string>
    <string name="bottom_bar_profile_screen_title">Профиль</string>
    <string name="profile_screen_title">Профиль</string>
    <string name="gallery_screen_title">Галерея</string>
    <string name="gallery_load_error_text">Не удалось загрузить ленту\nОбновите экран или попробуйте позже</string>
    <string name="refresh_btn_text">Обновить</string>
    <string name="favorites_screen_title">Мои избранные</string>
    <string name="dialog_confirm">Да, точно</string>
    <string name="dialog_cancel">Нет</string>
    <string name="profile_logout_btn">Выйти</string>
    <string name="profile_field_phone_label">Телефон</string>
    <string name="profile_field_city_label">Город</string>
    <string name="profile_field_email_label">Почта</string>
    <string name="logout_dialog_text">Вы точно хотите выйти из приложения?</string>
</resources>