<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfilePageFragment">

    <TextView
        android:id="@+id/profile_title_tv"
        style="@style/Text.SemiBold.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:text="@string/profile_screen_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar_iv"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="@dimen/horizontal_view_padding"
        android:layout_marginTop="23dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title_tv" />

    <TextView
        android:id="@+id/profile_name_tv"
        style="@style/Text.Medium.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_view_padding"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toEndOf="@id/avatar_iv"
        app:layout_constraintTop_toBottomOf="@id/profile_title_tv"
        tools:text="Александра" />

    <TextView
        android:id="@+id/profile_surname_tv"
        style="@style/Text.Medium.18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_view_padding"
        app:layout_constraintStart_toEndOf="@id/avatar_iv"
        app:layout_constraintTop_toBottomOf="@id/profile_name_tv"
        tools:text="Новикова" />

    <TextView
        android:id="@+id/profile_desc_tv"
        style="@style/Text.Regular.12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_view_padding"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_grey"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/avatar_iv"
        app:layout_constraintTop_toBottomOf="@id/profile_surname_tv"
        tools:text="“Светлое будущее живет \nв вечности”" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_iv">

        <ru.tumist.surfgallery.presentation.views.ProfileField
            android:id="@+id/profile_city_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/profile_field_city_label" />

        <ru.tumist.surfgallery.presentation.views.ProfileField
            android:id="@+id/profile_phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/profile_field_phone_label" />

        <ru.tumist.surfgallery.presentation.views.ProfileField
            android:id="@+id/profile_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:label="@string/profile_field_email_label" />

    </LinearLayout>


    <ru.tumist.surfgallery.presentation.views.buttons.AppLoadingButton
        android:id="@+id/profile_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        app:is_loading="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/profile_logout_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>